# tudu

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
hooks/: claude-tudu-hook.py
skills/tudu-setup/: SKILL.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  obsidian.rs  store.rs
