[package]
name = "tudu"
version = "0.1.1"
description = "Floating todo panel backed by an Obsidian vault file"
authors = ["charlie"]
edition = "2021"

[lib]
name = "tudu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
notify = "6"
parking_lot = "0.12"
rand = "0.8"

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.6"
cocoa = "0.26"
objc = "0.2"
